a bit more problems