@@ -1,11 +1,18 @@
 package org.example;
 
+import java.time.Duration;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 public class TwoPointersTechniqueProblems {
@@ -123,21 +130,14 @@ public class TwoPointersTechniqueProblems {
             lowerCaseLetter.equals("u");
     }
 
-    public static void main(String[] args) {
-        int[] array = {1,2};
-        int[] array1 = {1,1};
-
-        System.out.println(intersection(array, array1));
-    }
-
     //Assume you are an awesome parent and want to give your children some cookies. But, you should give each child at most one cookie.
     //
     //Each child i has a greed factor g[i], which is the minimum size of a cookie that the child will be content with;
     // and each cookie j has a size s[j]. If s[j] >= g[i], we can assign the cookie j to the child i, and the child i will be content.
     // Your goal is to maximize the number of your content children and output the maximum number.
     public int findContentChildren(int[] g, int[] s) {
-        List<Integer> listChild = Arrays.stream(g).boxed().sorted().collect(Collectors.toList());
-        List<Integer> listCokie = Arrays.stream(s).boxed().sorted().collect(Collectors.toList());
+        List<Integer> listChild = Arrays.stream(g).boxed().sorted().toList();
+        List<Integer> listCokie = Arrays.stream(s).boxed().sorted().toList();
         int sum = 0;
 
         int currentChild = 0;
@@ -175,9 +175,9 @@ public class TwoPointersTechniqueProblems {
         int biggerIndex = 0;
 
         while (lessIndex < lessSizeArray.length && biggerIndex < biggerSizeArray.length) {
-            if (lessSizeArray[lessIndex] <  biggerSizeArray[biggerIndex]) {
+            if (lessSizeArray[lessIndex] < biggerSizeArray[biggerIndex]) {
                 lessIndex++;
-            } else if(lessSizeArray[lessIndex] == biggerSizeArray[biggerIndex]) {
+            } else if (lessSizeArray[lessIndex] == biggerSizeArray[biggerIndex]) {
                 list.add(lessSizeArray[lessIndex]);
                 lessIndex++;
                 biggerIndex++;
@@ -187,5 +187,81 @@ public class TwoPointersTechniqueProblems {
         }
 
         return list.stream().mapToInt(Integer::intValue).distinct().toArray();
+    }
+
+    public static List<Integer> partitionLabels(String s) {
+        char[] chars = s.toCharArray();
+        int start = 0;
+        int end = chars.length - 1;
+        ArrayList<Integer> partitionSizes = new ArrayList<>();
+        int currentPartitionEnd = -1;
+
+        while (start <= end) {
+            if (chars[end] == chars[start]) {
+                if (start <= currentPartitionEnd) {
+                    Integer lastPartitionLength = partitionSizes.get(partitionSizes.size() - 1);
+                    partitionSizes.remove(partitionSizes.size() - 1);
+
+                    lastPartitionLength = lastPartitionLength + (end - currentPartitionEnd);
+                    partitionSizes.add(lastPartitionLength);
+
+                    currentPartitionEnd = end;
+                    start++;
+                    end = chars.length - 1;
+                } else {
+                    partitionSizes.add(end - start + 1);
+                    currentPartitionEnd = end;
+                    start++;
+                    end = chars.length - 1;
+                }
+            } else if (start == end) {
+                partitionSizes.add(1);
+                start++;
+                end = chars.length - 1;
+            } else {
+                if (end <= currentPartitionEnd) {
+                    start++;
+                    end = chars.length - 1;
+                } else {
+                    end--;
+                }
+            }
+        }
+        return partitionSizes;
+    }
+
+    // Given an array nums with n objects colored red, white, or blue, sort them in-place so that objects of the same color are adjacent, with the colors in the order red, white, and blue.
+    //
+    // We will use the integers 0, 1, and 2 to represent the color red, white, and blue, respectively.
+    public static void sortColors(int[] nums) {
+        int redEnd = 0;
+        int whiteStart = 0;
+        int whiteEnd = 0;
+
+        for (int i = 0; i < nums.length; i++) {
+            if (nums[i] == 0) {
+                change2Values(nums, i, redEnd);
+                redEnd++;
+                whiteStart = redEnd;
+                whiteEnd = (whiteEnd == 0) ? whiteStart : whiteEnd + 1;
+            }
+
+            if (nums[i] == 1) {
+                change2Values(nums, i, whiteEnd);
+                whiteEnd++;
+            }
+        }
+    }
+
+    private static void change2Values(int[] nums, int currentIndex, int indexForExchange) {
+        int tempValueFromWhiteEnd = nums[indexForExchange];
+        nums[indexForExchange] = nums[currentIndex];
+        nums[currentIndex] = tempValueFromWhiteEnd;
+    }
+
+    public static void main(String[] args) {
+        int[] nums = {0, 0, 1};
+        sortColors(nums);
+        System.out.println(Arrays.toString(nums));
     }
 }
